crates/vize_atelier_sfc/src/compile/tests/snapshots/vize_atelier_sfc__compile__tests__vapor__normal_script_sfc_vapor_output_mode.snap
---
source: crates/vize_atelier_sfc/src/compile/tests/vapor.rs
expression: result.code.as_str()
---
import { template as _template } from 'vue';
const t0 = _template("<div>Hello</div>", true)

function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  return n0
}

const _sfc_main = {
  name: 'NormalVapor'
}

_sfc_main.__vapor = true
_sfc_main.render = render
export default _sfc_main
