crates/vize_atelier_sfc/src/compile/tests/snapshots/vize_atelier_sfc__compile__tests__vapor__script_setup_sfc_vapor_slot_outlet.snap
---
source: crates/vize_atelier_sfc/src/compile/tests/vapor.rs
expression: result.code.as_str()
---
import { defineVaporComponent as _defineVaporComponent, getCurrentInstance as _getCurrentInstance, proxyRefs as _proxyRefs } from 'vue'
import { createSlot as _createSlot, setInsertionState as _setInsertionState, template as _template } from 'vue';

const t0 = _template("<div></div>", true)

function render(_ctx, $props, $emit, $attrs, $slots) {
  const n1 = t0()
  _setInsertionState(n1)
  const n0 = _createSlot("default")
  return n1
}
const __vaporRender = render

export default /*@__PURE__*/_defineVaporComponent({
  __name: 'anonymous',
  render: __vaporRender,
  setup(__props, { emit: __emit, attrs: __attrs, slots: __slots }) {


const __returned__ = {  }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __instance = _getCurrentInstance()
const __ctx = _proxyRefs(__returned__)
if (__instance) __instance.setupState = __ctx
return __vaporRender(__ctx, __props, __emit, __attrs, __slots)
}

})
